from CE pull # 5679: Adds docs for external networks

--- a/calico-enterprise/reference/resources/felixconfig.mdx
+++ b/calico-enterprise/reference/resources/felixconfig.mdx
@@ -192,6 +192,8 @@ spec:
 | egressIPRoutingRulePriority           | Controls the priority value to use for the egress gateway routing rule.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | int                                                                | int                                     | `100`                                                                                                                                                                                                                                                                                                                                                                                                                                             |
 | egressGatewayPollInterval             | Controls the interval at which Felix will poll remote egress gateways to check their health. Only Egress Gateways with a named "health" port will be polled in this way. Egress Gateways that fail the health check will be taken our of use as if they have been deleted.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | `5s`, `10s`, `1m` etc.                                             | duration                                | `10s`                                                                                                                                                                                                                                                                                                                                                                                                                                             |
 | egressGatewayPollFailureCount         | Controls the minimum number of poll failures before a remote Egress Gateway is considered to have failed.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | int                                                                | int                                     | `3`                                                                                                                                                                                                                                                                                                                                                                                                                                               |
+| externalNetworkSupport      | Defines two different support modes for external network function. `Disabled` means external network is not supported. `Enabled` means external network support is enabled. | Disabled,<br/>Enabled | string | `Disabled` |
+| externalNetworkRoutingRulePriority      | controls the priority value to use for the external network routing rule. | int | int | `102` |
 | captureDir                            | Controls the directory where packet capture files are stored.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | string                                                             | string                                  | `/var/log/calico/pcap`                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | captureMaxSizeBytes                   | Controls the maximum size in bytes for a packet capture file before rotation.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | int                                                                | int                                     | `10000000`                                                                                                                                                                                                                                                                                                                                                                                                                                        |
 | captureRotationSeconds                | Controls the rotation period in seconds for a packet capture file.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | int                                                                | int                                     | `3600`                                                                                                                                                                                                                                                                                                                                                                                                                                            |
