--- a/calico-enterprise/reference/resources/bgppeer.mdx
+++ b/calico-enterprise/reference/resources/bgppeer.mdx
@@ -56,6 +56,7 @@ spec:
 | numAllowedLocalASNumbers | The number of local AS numbers to allow in the AS path for received routes. This disables BGP loop prevention and should only be used if necessary.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |                                                                                             | integer                     | `nil` (BIRD will default to 0 meaning no change to loop prevention behavior) |
 | ttlSecurity              | Enables the generalized TTL security mechanism (GTSM) which protects against spoofed packets by ignoring received packets with a smaller than expected TTL value. The provided value is the number of hops (edges) between the peers.                                                                                                                                                                                                                                                                                                                                                                                                                      | 0 - 255                                                                                     | 8-bit integer               | `nil` (results in BIRD configuration `ttl security off`)                     |
 | filters                  | List of names of [BGPFilter](bgpfilter.mdx) resources to apply to this peering.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                             | string                      |                                                                              |
+| externalNetwork | Name of the external network to which this peer belongs. | <//TODO//> | string | |
 | reachableBy              | Adds a static route that may be needed to connect to a peer. In some cases, not having a static route for BGP peering results in route flapping. By adding the address of the gateway that the peer is connected to, a static route is added to prevent route flapping.                                                                                                                                                                                                                                                                                                                                                                                    | The address of the gateway that the peer is connected to                                    | string                      |                                                                              |
 
 :::tip
