--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/rancher.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/rancher.mdx
@@ -23,7 +23,7 @@ The geeky details of what you get:
 
 **Required**
 
-- A compatible [Rancher Kubernetes Engine cluster](https://rancher.com/docs/rke/latest/en/) with version 1.2.9 and later
+- A compatible [Rancher Kubernetes Engine cluster](https://rancher.com/docs/rke/latest/en/) with version 1.3
 
   - Configure your cluster with a [Cluster Config File](https://rancher.com/docs/rancher/v2.x/en/cluster-provisioning/rke-clusters/options/#cluster-config-file) and specify [no network plugin](https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins/) by setting `plugin: none` under `network` in your configuration file.
 
