[EV-2876] Add vdom parameter to Fortigate comfigmap (#212)

--- a/calico-enterprise/network-policy/policy-firewalls/fortinet-integration/firewall-integration.mdx
+++ b/calico-enterprise/network-policy/policy-firewalls/fortinet-integration/firewall-integration.mdx
@@ -140,8 +140,9 @@ The basic workflow is:
    | name                     | FortiGate device name                                                       |
    | ip                       | FortiGate Management Ip address                                             |
    | apikey                   | Secret in tigera-firewall-controller namespace, to store FortiGate's APIKey |
-   | apikey.secretKeyRef.name | Name of the secret to store APIKey.                                         |
+   | apikey.secretKeyRef.name | Name of the secret to store APIKey                                          |
    | apikey.secretKeyRef.key  | Key name in the secret, which stores APIKey                                 |
+   | vdom                     | FortiGate VDOM name                                                         |
 
    For example:
 
@@ -152,12 +153,14 @@ The basic workflow is:
        secretKeyRef:
          name: fortigate-east1
          key: apikey-fortigate-east1
+     vdom: fortigate-vdom1
    - name: prod-eastcoast-2
      ip: 1.2.3.2
      apikey:
        secretKeyRef:
          name: fortigate-east2
          key: apikey-fortigate-east2
+     vdom: fortigate-vdom2
    ```
 
 1. In the [FortiManager ConfigMap manifest]({{filesUrl}}/manifests/fortinet-device-configmap.yaml), add your FortiManager information in the data section, `tigera.firewall.fortimgr`.
