Fixing broken links

--- a/calico-enterprise/network-policy/application-layer-policies/alp.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp.mdx
@@ -20,7 +20,6 @@ Application layer policies let you limit access controls based on L7 attributes.
 ## How to
 - [Enable application layer policies](#enable-application-layer-policies)
 - [Enforce application layer policies for ingress traffic](#enforce-application-layer-policies-for-ingress-traffic)
-- [View policies in Manager UI](TBD)
 
 ## Enable application layer policies (ALP)
 In the ApplicationLayer custom resource, set the `applicationLayerPolicy` field to Enabled.
@@ -37,10 +36,10 @@ EOF
 ```
 Use the same field to disable the application layer policy.
 
-## Enforce application layer policies
+## Enforce application layer policies for ingress traffic
 
 You can restrict ingress traffic using HTTP match criteria using Network policy or Global network policy. 
-For a list of all HTTP match parameters, see [Network policy](../reference/resources/networkpolicy.mdx) and [Global network policy](reference/resources/globalnetworkpolicy.mdx).
+For a list of all HTTP match parameters, see [Network policy](/reference/resources/networkpolicy.mdx) and [Global network policy](/reference/resources/globalnetworkpolicy.mdx).
 
 In the following example, the trading app is allowed ingress traffic only for HTTP GET requests that match the exact path /projects/calico, or that begins with the prefix, /users.
 
