Better wording as per PR suggestion.
Co-authored-by: Mike Stephen <mike.stephen@tigera.io>

--- a/calico-cloud/threat/web-application-firewall.mdx
+++ b/calico-cloud/threat/web-application-firewall.mdx
@@ -79,7 +79,7 @@ On the Manager UI, click **Threat Defense -> Web Application Firewall -> Configu
 
 **Alternatively you can enable WAF manually by configuring ApplicationLayer CRD.**
 
-Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` section of the file. Ensure value of the field is set to `Enabled`.
+Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Enabled`.
 
 Example:
 
