Better wording as per PR suggestion.
Co-authored-by: Mike Stephen <mike.stephen@tigera.io>

--- a/calico-cloud/threat/web-application-firewall.mdx
+++ b/calico-cloud/threat/web-application-firewall.mdx
@@ -94,7 +94,7 @@ spec:
 
 #### Disabling WAF
 
-To disable WAF update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` section of the file and ensure value of the field is set to `Disabled`.
+To disable WAF update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Disabled`.
 
 Example:
 
