--- a/calico-enterprise/reference/resources/networkpolicy.mdx
+++ b/calico-enterprise/reference/resources/networkpolicy.mdx
@@ -20,6 +20,8 @@ import Icmp from '@site/calico-enterprise/_includes/content/_icmp.mdx';
 
 import Rule from '@site/calico-enterprise/_includes/content/_rule.mdx';
 
+import Httpmatch from '@site/calico/_includes/content/_httpmatch.mdx';
+
 A network policy resource (`NetworkPolicy`) represents an ordered set of rules which are applied
 to a collection of endpoints that match a [label selector](#selector).
 
@@ -132,8 +134,29 @@ spec:
 
 <Servicematch />
 
+## Application layer policy
+
+Application layer policy is an optional feature of {{prodname}} and
+[must be enabled](../../network-policy/istio/app-layer-policy.mdx)
+in order to use the following match criteria.
+
+:::note
+
+Application layer policy match criteria are supported with the following restrictions.
+
+- Only ingress policy is supported. Egress policy must not contain any application layer policy match clauses.
+- Rules must have the action `Allow` if they contain application layer policy match clauses.
+
+:::
+
+### HTTPMatch
+
+<Httpmatch />
+
+
 ## Supported operations
 
 | Datastore type           | Create/Delete | Update | Get/List | Notes |
 | ------------------------ | ------------- | ------ | -------- | ----- |
+| etcdv3                   | Yes           | Yes    | Yes      |
 | Kubernetes API datastore | Yes           | Yes    | Yes      |
