--- a/calico-cloud_versioned_docs/version-3.15/get-started/connect/setup-private-registry.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/get-started/connect/setup-private-registry.mdx
@@ -51,7 +51,40 @@ helm repo add calico-cloud {{clouddownloadbase}}/charts
 INSTALLER_IMAGE="{{cloudoperatorimage}}:$(helm show chart calico-cloud/calico-cloud | grep version: | sed -e 's/version: *//' -e 's/+/-g/')"
 IMAGES=(
 $INSTALLER_IMAGE
-image-list-v3.14.1-16 )
+docker.io/calico/pod2daemon-flexvol:v3.23.2
+quay.io/tigera/operator:v1.27.11
+quay.io/tigera/cnx-apiserver:v3.14.1
+quay.io/tigera/compliance-benchmarker:v3.14.1
+quay.io/tigera/compliance-controller:v3.14.1
+quay.io/tigera/compliance-reporter:v3.14.1
+quay.io/tigera/compliance-snapshotter:v3.14.1
+quay.io/tigera/deep-packet-inspection:v3.14.1
+quay.io/tigera/fluentd:v3.14.1
+quay.io/tigera/fluentd-windows:v3.14.1
+quay.io/tigera/guardian:v3.14.1
+quay.io/tigera/intrusion-detection-controller:v3.14.1
+quay.io/tigera/packetcapture-api:v3.14.1
+quay.io/tigera/l7-collector:v3.14.1
+quay.io/tigera/envoy:v3.14.1
+quay.io/tigera/prometheus:v3.14.1
+quay.io/tigera/prometheus-service:v3.14.1
+quay.io/tigera/alertmanager:v3.14.1
+quay.io/tigera/cnx-queryserver:v3.14.1
+quay.io/tigera/kube-controllers:v3.14.1
+quay.io/tigera/cnx-node:v3.14.1
+quay.io/tigera/typha:v3.14.1
+quay.io/tigera/cni:v3.14.1
+quay.io/tigera/cloud-controllers:v3.14.1
+quay.io/tigera/es-gateway:v3.14.1
+quay.io/tigera/calico-windows-upgrade:v3.14.1
+quay.io/tigera/dikastes:v3.14.1
+quay.io/tigera/key-cert-provisioner:v1.1.3
+quay.io/tigera/image-assurance-admission-controller:v1.2.1
+quay.io/tigera/runtime-security-operator:v1.2.0
+quay.io/tigera/skimble:v1.2.0
+quay.io/tigera/prometheus-operator:v3.14.1
+quay.io/tigera/prometheus-config-reloader:v3.14.1
+alpine:3.12.1
 ```
 
 ### Set up the private registry
