Fixes broken links

--- a/calico-enterprise/network-policy/get-started/kubernetes-demo.mdx
+++ b/calico-enterprise/network-policy/get-started/kubernetes-demo.mdx
@@ -64,7 +64,7 @@ Apply the following YAMLs to allow access from the management UI.
 
 ```shell
 kubectl create -f {{tutorialFilesURL}}/allow-ui.yaml
-kubectl create -f {{filesUrl}}/security/tutorials/kubernetes-policy-demo/policies/allow-ui-client.yaml
+kubectl create -f {{tutorialFilesURL}}/allow-ui-client.yaml
 ```
 
 After a few seconds, refresh the UI - it should now show the Services, but they should not be able to access each other any more.
