--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/requirements.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/requirements.mdx
@@ -53,7 +53,7 @@ IP ranges in your network, including:
 ## Application layer policy requirements
 
 - [MutatingAdmissionWebhook](https://kubernetes.io/docs/admin/admission-controllers/#mutatingadmissionwebhook) enabled
-- Istio [v1.9](https://istio.io/about/notes/1.9/) or [v1.10](https://archive.istio.io/v1.10/)
+- Istio [v1.9](https://istio.io/v1.9/) or [v1.10](https://archive.istio.io/v1.10/)
 
 Note that Kubernetes version 1.16+ requires Istio version 1.2 or greater.
 Note that Istio version 1.9 requires Kubernetes version 1.17-1.20.
