--- a/calico-enterprise/networking/egress/egress-gateway-azure.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-azure.mdx
@@ -121,37 +121,23 @@ Azure Route Server deployment is per VNet, as such each VNet with egress gateway
 
 ## How to
 
-- [Enable BGP](#enable-bgp)
-- [Choose Route Reflectors](#choose-route-reflectors)
+- [Choose route reflectors](#choose-route-reflectors)
 - [Create Azure Route Server](#create-azure-route-server)
-- [Configure Route Reflector](#configure-route-reflector)
 - [Disable the default BGP node-to-node mesh](disable-the-default-bgp-node-to-node-mesh)
+- [Enable BGP](#enable-bgp)
+- [Provision an egress IP pool](#provision-an-egress-ip-pool)
+- [(Optional) Configure BGP filters](#configure-bgp-filters)
+- [Configure route reflector](#configure-route-reflector)
 - [Enable egress gateway support](#enable-egress-gateway-support)
 - [Enable policy sync API](#enable-policy-sync-api)
-- [Provision an egress IP pool](#provision-an-egress-ip-pool)
 - [Copy pull secret into egress gateway namespace](#copy-pull-secret-into-egress-gateway-namespace)
 - [Deploy a group of egress gateways](#deploy-a-group-of-egress-gateways)
 - [Configure a Namespace or Pod to use egress gateways](#configure-a-namespace-or-pod-to-use-egress-gateways)
-- [Optionally enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
+- [(Optional) Enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
 - [Verify the feature operation](#verify-the-feature-operation)
 - [Controlling the use of egress gateways](#controlling-the-use-of-egress-gateways)
 - [Policy enforcement for flows via an egress gateway](#policy-enforcement-for-flows-via-an-egress-gateway)
-
-### Enable BGP
-
-Usually, in the default installation of {{prodname}} in a public cloud, BGP is disabled as it is not used.
-However, running egress gateways in Azure relies on BGP connections between {{prodname}} and Azure
-Route Servers. To enable BGP routing protocol, set `bgp` field to `Enabled` in the default installation:
-
-```batch
-kubectl patch installation default --type='merge' -p '{"spec": {"calicoNetwork": {"bgp": "Enabled"}}}'
-```
-
-and then restart the {{prodname}} daemonSet:
-
-```batch
-kubectl rollout restart ds calico-node -n calico-system
-```
+- [Upgrading egress gateways](#upgrading-egress-gateways)
 
 ### Choose route reflectors
 
@@ -177,7 +163,74 @@ and add the chosen Route Reflectors as peers to it.
 
 :::
 
-### Configure Route Reflector
+### Disable the default BGP node-to-node mesh
+
+The default {{prodname}} **node-to-node BGP mesh** may be turned off to enable other BGP topologies.
+To do this, modify the default **BGP configuration** resource.
+
+Run the following command to disable the BGP full-mesh:
+
+```batch
+calicoctl patch bgpconfiguration default -p '{"spec": {"nodeToNodeMeshEnabled": false}}'
+```
+
+:::note
+
+If the default BGP configuration resource does not exist, you need to create it first. See [BGP configuration](../../reference/resources/bgpconfig.mdx) for more information.
+
+:::
+
+:::note
+
+Disabling the node-to-node mesh will break pod networking until/unless you configure replacement BGP peerings using BGPPeer resources.
+You may configure the BGPPeer resources before disabling the node-to-node mesh to avoid pod networking breakage.
+
+:::
+
+### Enable BGP
+
+Usually, in the default installation of {{prodname}} in a public cloud, BGP is disabled as it is not used.
+However, running egress gateways in Azure relies on BGP connections between {{prodname}} and Azure
+Route Servers. To enable BGP routing protocol, set `bgp` field to `Enabled` in the default installation:
+
+```batch
+kubectl patch installation default --type='merge' -p '{"spec": {"calicoNetwork": {"bgp": "Enabled"}}}'
+```
+
+and then restart the {{prodname}} daemonSet:
+
+```batch
+kubectl rollout restart ds calico-node -n calico-system
+```
+
+#### Provision an egress IP pool
+
+Provision a small IP Pool with the range of source IPs that you want to use for a particular
+application when it connects to an external service. For example:
+
+```batch
+kubectl apply -f - <<EOF
+apiVersion: projectcalico.org/v3
+kind: IPPool
+metadata:
+  name: egress-ippool-1
+spec:
+  cidr: 10.10.10.0/31
+  blockSize: 31
+  nodeSelector: "!all()"
+EOF
+```
+
+Where:
+- `blockSize` must be specified when the prefix length of the whole `cidr` is more than the default `blockSize` of 26.
+
+- `nodeSelector: "!all()"` is recommended so that this egress IP pool is not accidentally used for cluster pods in general. Specifying this `nodeSelector` means that the IP pool is only used for pods that explicitly identify it in their `cni.projectcalico.org/ipv4pools` annotation.
+
+- Set `vxlanMode` to `Always` since [VXLAN](../networking/vxlan-ipip) is the only supported encapsulation in Azure.
+
+### (Optional) Configure BGP filters
+
+### Configure route reflectors
 
 {{prodname}} nodes can be configured to act as route reflectors. To do this, each node that you want to act as a route reflector
 must have a cluster ID - typically an unused IPv4 address.
@@ -249,30 +302,6 @@ spec:
 
 :::
 
-### Disable the default BGP node-to-node mesh
-
-The default {{prodname}} **node-to-node BGP mesh** may be turned off to enable other BGP topologies.
-To do this, modify the default **BGP configuration** resource.
-
-Run the following command to disable the BGP full-mesh:
-
-```batch
-calicoctl patch bgpconfiguration default -p '{"spec": {"nodeToNodeMeshEnabled": false}}'
-```
-
-:::note
-
-If the default BGP configuration resource does not exist, you need to create it first. See [BGP configuration](../../reference/resources/bgpconfig.mdx) for more information.
-
-:::
-
-:::note
-
-Disabling the node-to-node mesh will break pod networking until/unless you configure replacement BGP peerings using BGPPeer resources.
-You may configure the BGPPeer resources before disabling the node-to-node mesh to avoid pod networking breakage.
-
-:::
-
 ### Enable egress gateway support
 
 In the default **FelixConfiguration**, set the `egressIPSupport` field to `EnabledPerNamespace` or
@@ -306,31 +335,6 @@ kubectl patch felixconfiguration.p default --type='merge' -p \
 `egressIPSupport` and `policySyncPathPrefix` must be the same on all cluster nodes, so you should only set them in the `default` FelixConfiguration resource.
 
 :::
-
-#### Provision an egress IP pool
-
-Provision a small IP Pool with the range of source IPs that you want to use for a particular
-application when it connects to an external service. For example:
-
-```batch
-kubectl apply -f - <<EOF
-apiVersion: projectcalico.org/v3
-kind: IPPool
-metadata:
-  name: egress-ippool-1
-spec:
-  cidr: 10.10.10.0/31
-  blockSize: 31
-  nodeSelector: "!all()"
-EOF
-```
-
-Where:
-- `blockSize` must be specified when the prefix length of the whole `cidr` is more than the default `blockSize` of 26.
-
-- `nodeSelector: "!all()"` is recommended so that this egress IP pool is not accidentally used for cluster pods in general. Specifying this `nodeSelector` means that the IP pool is only used for pods that explicitly identify it in their `cni.projectcalico.org/ipv4pools` annotation.
-
-- Set `vxlanMode` to `Always` since [VXLAN](../networking/vxlan-ipip) is the only supported encapsulation in Azure.
 
 ### Copy pull secret into egress gateway namespace
 
