--- a/calico-enterprise/networking/egress/egress-gateway-azure.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-azure.mdx
@@ -231,8 +231,11 @@ Where:
 ### (Optional) Limit number of route advertisements
 
 It is only necessary to advertise the egress IP pool, created in the previous section, to Azure Route Servers. By default {{prodname}}
-advertise all other IP pools, which does not affect any functionality. However, Azure Route Servers have a [limit](https://learn.microsoft.com/en-us/azure/route-server/overview#route-server-limits) of 1000 advertisements per peers. This limit should not be an issue in a small or medium size cluster, but could be for large size cluster.
-In order to prevent hitting the limit, it is possible to create [BGP filters](../configuring/bgp.mdx#configure-a-bgp-filter) to advertise only egress IP pools. As an example, for the IP pool created in the previous section, configure a BGP filter by running the following command:
+advertise all other IP pools, which does not affect any functionality. However, Azure Route Servers have a
+[limit](https://learn.microsoft.com/en-us/azure/route-server/overview#route-server-limits) of 1000 advertisements per peer.
+This limit should not be an issue in a small or medium size cluster, but could be for large size cluster. In order to prevent hitting the limit,
+it is possible to create [BGP filters](../configuring/bgp.mdx#configure-a-bgp-filter) to advertise only egress IP pools. As an example,
+for the IP pool created in the previous section, configure a BGP filter by running the following command:
 
 ```batch
 kubectl apply -f - <<EOF
@@ -248,7 +251,8 @@ spec:
 EOF
 ```
 
-In addition, to prevent {{prodname}} advertising pod IP blocks, it is possible to set `disableBGPExport` to `true` in the default IP pools.
+Even with BGP filter, {{prodname}} still advertise pod IP blocks. To prevent {{prodname}} advertising pod IP blocks, it is possible to set
+`disableBGPExport` to `true` in the default IP pools.
 
 ### Configure route reflectors
 
