--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -1,5 +1,5 @@
 ---
-description: Learn how you can apply ALP to your pods and control ingress traffic.
+description: Learn how you can apply ALP to your workloads and control ingress traffic.
 ---
 
 # Enforce application layer policies on your apps (tutorial)
