--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -59,7 +59,7 @@ Notice that from here, we get direct access to the backend database. For example
 
 #### Applying network policy
 
-With a {{prodname}} policy, you can mitigate all the risks in the YAO Bank application.
+With a {{prodname}} policy, you can mitigate risks to the YAO Bank application.
 
     wget {{filesUrl}}/security/tutorials/app-layer-policy/manifests/30-policy.yaml
     calicoctl create -f 30-policy.yaml
