--- a/calico-enterprise/network-policy/application-layer-policies/alp.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp.mdx
@@ -14,7 +14,7 @@ Application layer policies let you limit access controls based on L7 attributes.
 ### Limitations
 - Application layer policy supports restricting only ingress traffic
 - Support for L7 attributes are limited to HTTP method, and URL exact/prefix path 
-- Support for protocols is limited to TCP-based protocols (for example, HTTP, HTTPS, or gRPC)
+- Supported protocols are limited to TCP-based protocols (for example, HTTP, HTTPS, or gRPC)
 - You can control application layer policies only at the cluster level (not per namespace) 
 
 ## How to
