Addressed Seth's comments

--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -83,7 +83,7 @@ spec:
     - action: Allow
 ```
 
-This policy protects the customer web app. Since this application is customer facing, we do not
+The first policy protects the customer web app. Since this application is customer facing, we do not
 restrict what can communicate with it. We do, however, restrict its communications to HTTP `GET`
 requests.
 
