--- a/calico-enterprise/network-policy/application-layer-policies/alp.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp.mdx
@@ -34,7 +34,10 @@ spec:
   applicationLayerPolicy: Enabled
 EOF
 ```
-Use the same field to disable the application layer policy.
+To disable the policy, do one of the following steps:
+ - Set the `applicationLayerPolicy` field in the `ApplicationLayer` custom resource to `Disabled`.
+ - Remove the `applicationLayerPolicy` field entirely.
+ - Delete the ApplicationLayer` custom resource.
 
 ## Enforce application layer policies for ingress traffic
 
