more review points addressed.

--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -94,7 +94,7 @@ spec:
 
 #### Disabling WAF
 
-To disable WAF update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Disabled`.
+To disable WAF, update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Disabled`.
 
 Example:
 
@@ -117,8 +117,8 @@ Once your cluster is configured for WAF you will be presented with a list of Kub
   width='600'
 />
 
-From the **Action** column you can then select **Enable** or **Disable** action to respectively enable or disable WAF for each of the services.
-You will be presented with a window containing a **kubectl** command that you will be required to execute for the action to take effect.
+From the **Action** column, select **Enable** or **Disable** to respectively enable or disable WAF for each of the services.
+You will be presented with a window containing a kubectl command, which you must execute on a cluster node for the action to take effect.
 
 <img
   src='/img/calico-enterprise/master/waf-enable.png'
@@ -126,7 +126,7 @@ You will be presented with a window containing a **kubectl** command that you wi
   width='600'
 />
 
-**Alternatively you can annotate the services you wish to enable WAF for as shown.**
+Alternatively, you can annotate the services you want to enable WAF for as follows:
 
 ```batch
 kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging=true
