WAF documentation update to reflect UI changes. (#223)
Co-authored-by: Mike Stephen <mike.stephen@tigera.io>

--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -73,9 +73,13 @@ kubectl patch felixconfiguration default --type='merge' -p '{"spec":{"policySync
 
 ### Configure a cluster for WAF
 
-#### Step 1: Configure ApplicationLayer CRD
+#### Step 1: Enable WAF in your cluster
 
-Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the webApplicationFirewall section of the file. Ensure value of the field is set to Enabled.
+On the Manager UI, click **Threat Defense -> Web Application Firewall -> Configure Web Application Firewall**.
+
+**Alternatively you can enable WAF manually by configuring ApplicationLayer CRD.**
+
+Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Enabled`.
 
 Example:
 
@@ -88,9 +92,41 @@ spec:
   webApplicationFirewall: Enabled
 ```
 
+#### Disabling WAF
+
+To disable WAF, update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Disabled`.
+
+Example:
+
+```yaml
+apiVersion: operator.tigera.io/v1
+kind: ApplicationLayer
+metadata:
+  name: tigera-secure
+spec:
+  webApplicationFirewall: Disabled
+```
+
 #### Step 2: Select traffic for WAF
 
-Annotate the services you wish to enable WAF for as shown.
+Once your cluster is configured for WAF you will be presented with a list of Kubernetes services available in the cluster:
+
+<img
+  src='/img/calico-enterprise/master/waf-services.png'
+  alt='WAF services'
+  width='600'
+/>
+
+From the **Action** column, select **Enable** or **Disable** to respectively enable or disable WAF for each of the services.
+You will be presented with a window containing a kubectl command, which you must execute on a cluster node for the action to take effect.
+
+<img
+  src='/img/calico-enterprise/master/waf-enable.png'
+  alt='Enable WAF for a service'
+  width='600'
+/>
+
+Alternatively, you can annotate the services you want to enable WAF for as follows:
 
 ```batch
 kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging=true
