DOCS-1136: fixed the missing period (#220)
* fixed the missing period

* fixing extraneous characters in a note

* fixing changes to other branches

* fixing 3.25 branch

* Update calico/getting-started/kubernetes/windows-calico/kubernetes/standard.mdx

Fixed the space issue

Co-authored-by: Christopher Tauchen <tauchen@gmail.com>

* Update calico_versioned_docs/version-3.24/getting-started/kubernetes/windows-calico/kubernetes/standard.mdx

Deleted the extra space

Co-authored-by: Christopher Tauchen <tauchen@gmail.com>

---------

Co-authored-by: Christopher Tauchen <tauchen@gmail.com>

--- a/calico/getting-started/kubernetes/windows-calico/kubernetes/standard.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/kubernetes/standard.mdx
@@ -6,7 +6,7 @@ description: Install Calico for Windows to enable a workload-to-workload Zero Tr
 
 ## Big picture
 
-Install {{prodnameWindows}} on Kubernetes clusters. The standard installation for {{prodnameWindows}} requires more time and expertise to configure. If you need to get started quickly, we recommend the [Quickstart](../quickstart.mdx)
+Install {{prodnameWindows}} on Kubernetes clusters. The standard installation for {{prodnameWindows}} requires more time and expertise to configure. If you need to get started quickly, we recommend the [Quickstart](../quickstart.mdx).
 
 ## Value
 
@@ -283,19 +283,18 @@ cd {{rootDirWindows}}
 
 :::note
 
-The installer initializes the Windows vSwitch, which can cause a short connectivity outage as the networking stack is reconfigured. After running that command, you may need to:
+ The installer initializes the Windows vSwitch, which can cause a short connectivity outage as the networking stack is reconfigured. After running that command, you may need to:
 
-- Reconnect to your remote desktop session.
-- Restart `kubelet` and `kube-proxy` if they were already running.
-- If you haven't started `kubelet` and `kube-proxy` already, you should do so now. The quickstart scripts provided in the {{prodname}} package provide an easy way to do this. {{prodname}} requires `kubelet` to be running to complete its per-node configuration (since Kubelet creates the Kubernetes Node resource).
+ - Reconnect to your remote desktop session.
+ - Restart `kubelet` and `kube-proxy` if they were already running.
+ - If you haven't started `kubelet` and `kube-proxy` already, you should do so now. The quickstart scripts provided in the {{prodname}} package provide an easy way to do this. {{prodname}} requires `kubelet` to be running to complete its per-node configuration (since Kubelet creates the Kubernetes Node resource).
 
-  :::
+:::
 
-  :::note
+:::note
 
-  After you run the installer, do not move the directory because the service registration refers to the path of the directory.
-
-  :::
+After you run the installer, do not move the directory because the service registration refers to the path of the directory.
+:::
 
 4. Verify that the {{prodname}} services are running.
 
